tests/baselines/reference/parserComputedPropertyName37.errors.txt
//// [tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.ts] ////

parserComputedPropertyName37.ts(2,6): error TS2304: Cannot find name 'public'.


==== parserComputedPropertyName37.ts (1 errors) ====
    var v = {
        [public]: 0
         ~~~~~~
!!! error TS2304: Cannot find name 'public'.
    };